tests/wpt/tests/third_party/test262/test/language/statements/variable/eval-strict-list-repeated.js
// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
es5id: 12.2.1-31-s
esid: sec-variable-statement
description: >
    eval as local var identifier defined twice throws SyntaxError in
    strict mode
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var eval, eval;
